index.html style.css updated

--- a/style.css
+++ b/style.css
@@ -558,6 +558,7 @@
 
     .hero {
         height: 40vh;
+        background-image: none;
         background-image: url(/images/hero_image2.jpeg);
 
     }
