--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: 'Inter', sans-serif;
 }
 
+/***********Navbar***************/
 .navbar {
     display: flex;
     height: 60px;
@@ -38,6 +39,18 @@
     height: 45px;
     width: 120px;
 }
+
+.link {
+
+    color: inherit;
+    text-decoration: none;
+}
+
+.link:hover {
+
+    cursor: pointer;
+}
+
 
 
 /*Box2*/
@@ -273,20 +286,7 @@
 
 }
 
-/**Hero section**/
-
-.hero {
-    width: 100%;
-    background-image: url('images/hero_image.jpg');
-    height: 40vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-
-}
-
+/*******************Hero-Image section***************/
 .hero p {
     display: flex;
     background-color: #f6f6f6;
@@ -317,7 +317,74 @@
     text-decoration: underline;
 }
 
-/*Card section*/
+/*Image slider*/
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    position: relative;
+    margin: auto;
+}
+
+/* Caption text */
+.cap {
+
+    font-size: 15px;
+    padding: 12px 12px;
+    position: absolute;
+    bottom: 18px;
+    width: 90%;
+    text-align: center;
+    color: black;
+    background-color: #f6f6f6;
+    margin-left: 5%;
+    font-weight: 500;
+}
+
+.mySlides img {
+
+    width: 100%;
+    height: 60vh;
+}
+
+.hero .cap a {
+    color: rgb(4, 97, 111);
+    text-decoration: none;
+    font-weight: 600;
+    margin-left: 2px;
+}
+
+.hero .cap a:hover {
+    color: rgb(202, 109, 22);
+    text-decoration: none;
+    font-weight: 600;
+    text-decoration: underline;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.8
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+
+/*****************Shoping-card section***************/
 .shop-section {
 
     width: 100%;
@@ -379,8 +446,9 @@
     color: rgb(147, 67, 38);
 }
 
-/**Footer**/
 
+
+/***********Footer***************/
 .footer1 {
     width: 100%;
     height: 50px;
@@ -447,6 +515,7 @@
 .footer3 button {
     height: 35px;
     margin-right: 15px;
+    margin-top: 5px;
     background-color: #232f3f;
     border: 1px solid #89919b;
     border-radius: 5px;
@@ -480,19 +549,37 @@
 
 .footer4 {
     background-color: #0f1111;
-    width: 100%;
-    height: 80px;
+    width: auto;
+    height: auto;
     color: white;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
+}
+
+.footer4 p {
+    padding: 8px;
+
+}
+
+.footer4 #p1 {
+    border-bottom: 0.4px solid rgb(112, 112, 112);
+    font-weight: 550;
+    font-size: 1rem;
+}
+
+.footer4 #p2 {
+    font-style: italic;
+    font-size: 0.88rem;
+    color: rgb(211, 211, 211);
 }
 
 
 
-/**Media queries**/
+/***********************Media queries*********************/
 @media only screen and (max-width:1200px) {
 
     .address {
@@ -533,11 +620,6 @@
         height: auto;
     }
 
-    /* .nav2 .deals {
-        width: auto;
-        height: auto;
-    } */
-
     .navbar {
 
         justify-content: space-between;
@@ -552,22 +634,25 @@
         justify-content: space-between;
     }
 
+    .mySlides img {
+
+        width: 100vw;
+        height: auto;
+        min-height: 30vh;
+    }
+
+    .mySlides .cap {
+        font-size: 14px;
+        padding: 8px;
+    }
+
 }
 
 @media only screen and (max-width:600px) {
 
-    .hero {
-        height: 40vh;
-    }
-
     .navbar .logo img {
         width: 85px;
         height: 35px;
-    }
-
-    .hero p {
-        height: auto;
-        font-size: 12px;
     }
 
     .nav2 {
@@ -605,4 +690,38 @@
     .card {
         height: auto;
     }
+
+    .mySlides .cap {
+        font-size: 12px;
+    }
+}
+
+
+@media only screen and (max-width: 350px) {
+    .text {
+        font-size: 11px
+    }
+
+    .navbar .lang {
+        display: none;
+    }
+
+    .mySlides .cap {
+        font-size: 10px;
+        padding: 5px;
+    }
+
+    /*Sign button*/
+    .p1 {
+        font-size: 0.7rem;
+    }
+
+    .p2 {
+        font-size: 0.92rem;
+    }
+
+    .card h2 {
+        font-size: 1rem;
+    }
+
 }
